--- a/easy-ui-react/src/Stepper/StepButton.module.scss
+++ b/easy-ui-react/src/Stepper/StepButton.module.scss
@@ -1,6 +1,7 @@
 @use "../styles/common" as *;
 
 .containerHorizontal {
+  @include component-token("step-button", "max-height", 56px);
   padding: design-token("space.0") design-token("space.1");
   @include breakpoint-sm-up {
     padding: design-token("space.2");
@@ -8,33 +9,38 @@
 }
 
 .containerVertical {
-  padding: 0;
+  @include component-token("step-button", "max-height", 24px);
+  padding: design-token("space.0");
+}
+
+.container {
+  max-height: component-token("step-button", "max-height");
 }
 
 .colorPrimary {
   @include component-token(
     "step-button",
-    "color.text.active",
+    "color-active",
     theme-token("color.text.action")
   );
   @include component-token(
     "step-button",
-    "color.text.incomplete",
+    "color-incomplete",
     theme-token("color.text.gray.resting")
   );
   @include component-token(
     "step-button",
-    "color.text.complete",
+    "color-complete",
     theme-token("color.text")
   );
   @include component-token(
     "step-button",
-    "active.background.color",
+    "active-background",
     theme-token("color.background.primary")
   );
   @include component-token(
     "step-button",
-    "incomplete.border.color",
+    "incomplete-border",
     theme-token("color.border.incomplete")
   );
 }
@@ -42,27 +48,27 @@
 .colorInverse {
   @include component-token(
     "step-button",
-    "color.text.active",
+    "color-active",
     theme-token("color.text.inverse")
   );
   @include component-token(
     "step-button",
-    "color.text.incomplete",
+    "color-incomplete",
     theme-token("color.text.inverse")
   );
   @include component-token(
     "step-button",
-    "color.text.complete",
+    "color-complete",
     theme-token("color.text.inverse")
   );
   @include component-token(
     "step-button",
-    "active.background.color",
+    "active-background",
     theme-token("color.background")
   );
   @include component-token(
     "step-button",
-    "incomplete.border.color",
+    "incomplete-border",
     theme-token("color.border.inverse")
   );
 }
@@ -73,17 +79,17 @@
 }
 
 .statusComplete {
-  @include component-token("step-button", "orientation.vertical.margin", -2px);
-  color: component-token("step-button", "color.text.complete");
+  @include component-token("step-button", "orientation-vertical-margin", -2px);
+  color: component-token("step-button", "color-complete");
 }
 
 .statusIncomplete {
-  color: component-token("step-button", "color.text.incomplete");
+  color: component-token("step-button", "color-incomplete");
 }
 
 .statusActive {
   @include font-style("subtitle1");
-  color: component-token("step-button", "color.text.active");
+  color: component-token("step-button", "color-active");
 }
 
 .StepButton {
@@ -103,19 +109,19 @@
 }
 
 .orientationVertical {
-  margin-left: component-token("step-button", "orientation.vertical.margin");
+  margin-left: component-token("step-button", "orientation-margin");
 }
 
 .indicatorHorizontal {
-  @include component-token("step-button", "indicator.size", 20px);
+  @include component-token("step-button", "indicator-size", 20px);
 }
 
 .indicatorVertical {
-  @include component-token("step-button", "indicator.size", 16px);
+  @include component-token("step-button", "indicator-size", 16px);
 }
 
 .indicatorActive {
-  background-color: component-token("step-button", "active.background.color");
+  background-color: component-token("step-button", "active-background");
 }
 
 .indicatorVertical.indicatorActive {
@@ -123,13 +129,13 @@
 }
 
 .indicatorIncomplete {
-  border: 1px solid component-token("step-button", "incomplete.border.color");
+  border: 1px solid component-token("step-button", "incomplete-border");
   margin: calc(#{design-token("space.0.5")} - 1px) design-token("space.0");
 }
 
 .indicator {
-  height: component-token("step-button", "indicator.size");
-  width: component-token("step-button", "indicator.size");
+  height: component-token("step-button", "indicator-size");
+  width: component-token("step-button", "indicator-size");
   border-radius: 50%;
 }
 
